# mycego_bot_v2

./: .env-template  .gitignore  Dockerfile  README.md  docker-compose.yaml  gc-template.json  pyproject.toml  requirements.txt
bot/: alembic.ini  celery_main.py  constructor.py  main.py  polling.py  polling_dispatcher.py  settings.py  webhooks.py
bot/FSM/: __init__.py  acquaintance.py  auth.py  edit_contacts.py  pay_sheets.py  question.py  request.py  surveys.py  work.py
bot/alembic/: env.py
bot/api_services/: __init__.py  chat-gpt.py  chat_gpt.py  google_sheets.py  head_hunter.py  mycego_site.py
bot/celery_actions/: fix_surveys.py  happy_birthday.py  renew_db.py  renew_standards.py
bot/constructors/: __init__.py  bot_constructor.py  dispatcher_constructor.py  google_sheets_constructor.py  lifespan_constructor.py  scheduler_constructor.py  storage_constructor.py
bot/custom_filters/: __init__.py  in_states_groups.py  not_digits_filter.py  not_states_group.py
bot/db/: __init__.py  base.py
bot/dispatchers/: lifespan_dispatcher.py
bot/handlers/: __init__.py
bot/helpers/: __init__.py  async_delete_message.py  async_form_works_done_message.py  async_get_message_counts_by_user.py  async_get_user_by_id.py  async_get_user_by_site_username.py  async_get_users_count.py  async_notify_admins.py  capitalize_first_letter.py  delivery_helpers.py  get_username_or_first_name.py  kick_fired.py  make_delivery_view_message.py  make_survey_admin_message.py  parse_delivery_nums.py  sanitize.py  seconds_to_midnight.py  seconds_to_time.py
bot/keyboards/: __init__.py
(+103 files in other folders)
