[tool.poetry]
name = "mycego-bot-fork"
version = "0.1.0"
description = ""
authors = ["mycego"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "23.2.1"
aiogram = "3.10.0"
aiohttp = "3.9.5"
aiosignal = "1.3.1"
aiosqlite = "0.20.0"
annotated-types = "0.7.0"
anyio = "4.4.0"
asyncpg = "0.29.0"
attrs = "23.2.0"
certifi = "2024.7.4"
charset-normalizer = "3.3.2"
click = "8.1.7"
distro = "1.9.0"
environs = "11.0.0"
frozenlist = "1.4.1"
greenlet = "3.0.3"
h11 = "0.14.0"
httpcore = "1.0.5"
httpx = "0.27.0"
idna = "3.7"
loguru = "0.7.2"
magic-filter = "1.0.12"
marshmallow = "3.21.3"
multidict = "6.0.5"
mypy-extensions = "1.0.0"
openai = "1.37.0"
packaging = "24.1"
pathspec = "0.12.1"
platformdirs = "4.2.2"
pydantic = "2.8.2"
pydantic-core = "2.20.1"
python-dotenv = "1.0.1"
sniffio = "1.3.1"
sqlalchemy = "2.0.31"
tqdm = "4.66.4"
typing-extensions = "4.12.2"
urllib3 = "2.2.2"
yarl = "1.9.4"
alembic = "^1.13.2"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
